--- a/VMDEditor/VMDEditor.csproj
+++ b/VMDEditor/VMDEditor.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ReactiveProperty" Version="6.2.0" />
+  </ItemGroup>
+
 </Project>
