--- a/VMDEditor/VMDEditor.csproj
+++ b/VMDEditor/VMDEditor.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="ReactiveProperty" Version="6.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="MikuMikuMethods">
+      <HintPath>..\..\MikuMikuMethods\MikuMikuMethods\bin\Release\MikuMikuMethods.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
